banner section added

--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
             </div>
         </div>
     </header>
+    <!-- Header part End here  -->
+    <!-- Banner Part Start Here -->
+    <section>
+        <div class="banner_container">
+            <img src="/Resources/img/Hero_Banner.png" alt="">
+        </div>
+    </section>
 </body>
 
 </html>
