lifestle and photodiary section added

--- a/index.html
+++ b/index.html
@@ -1,37 +1,150 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Css file link -->
     <link rel="stylesheet" href="/css/style.css" />
     <title>Minimo</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <!-- Header part start here  -->
     <header>
-        <div class="header_container">
-            <div class="logo">
-                <img src="/Resources/img/icon/minimo.png" alt="" />
-            </div>
-            <div class="menu_items">
-                <a href="#">lifestyle</a>
-                <a href="#">Photodiary</a>
-                <a href="#">Music</a>
-                <a href="#">Travel</a>
-            </div>
+      <div class="header_container">
+        <div class="logo">
+          <img src="/Resources/img/icon/minimo.png" alt="" />
         </div>
+        <div class="menu_items">
+          <a href="#">lifestyle</a>
+          <a href="#">Photodiary</a>
+          <a href="#">Music</a>
+          <a href="#">Travel</a>
+        </div>
+      </div>
     </header>
     <!-- Header part End here  -->
+
     <!-- Banner Part Start Here -->
     <section>
-        <div class="banner_container">
-            <img src="/Resources/img/Hero_Banner.png" alt="">
+      <div class="banner_container">
+        <img src="/Resources/img/Hero_Banner.png" alt="" />
+        <div class="banner_text">
+          <h4>Photodiary</h4>
+          <h1>The perfect weekend getaway</h1>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum. Sed ut
+            perspiciatis unde omnis iste natus error sit voluptatem accusantium
+            doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo
+            inventore veritatis et quasi architecto beatae vitae dicta sunt
+            explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur
+            aut odit aut fugit, sed quia consequuntur magni dolores eos qui
+            ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui
+            dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed
+            quia non numquam eius modi tempora incidunt ut labore et dolore
+            magnam aliquam quaerat voluptatem.
+          </p>
+          <h4>LEAVE A COMMENT</h4>
         </div>
+      </div>
     </section>
-</body>
+    <!-- Banner section end here  -->
 
+    <!-- life Style section start here -->
+    <section>
+      <div class="lifestyle_container">
+        <div class="first_one">
+          <div class="lifestyle_img">
+            <img src="/Resources/img/service_1.png" alt="" />
+          </div>
+          <div class="lifestyle_text">
+            <h4>lifestyle</h4>
+            <h1>More than just a music festival</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea
+            </p>
+          </div>
+        </div>
+        <div class="second_one">
+          <div class="lifestyle_img">
+            <img src="/Resources/img/service_2.png" alt="" />
+          </div>
+          <div class="lifestyle_text">
+            <h4>lifestyle</h4>
+            <h1>Life tastes better with coffee</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- life style section end here  -->
+
+    <!-- Photodiary start here -->
+    <section>
+      <div class="lifestyle_container">
+        <div class="first_one">
+          <div class="lifestyle_img">
+            <img src="/Resources/img/service_3.jpg" alt="" />
+          </div>
+          <div class="lifestyle_text">
+            <h4>Photodiary</h4>
+            <h1>American dream</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea
+            </p>
+          </div>
+        </div>
+        <div class="second_one">
+          <div class="lifestyle_img">
+            <img src="/Resources/img/service_4.png" alt="" />
+          </div>
+          <div class="lifestyle_text">
+            <h4>Photodiary</h4>
+            <h1>A day exploring the Alps</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Photodiary end here -->
+
+    <!-- Newsletter section start here -->
+    <section>
+      <div class="newsletter_container">
+        <div class="newsletter_text">
+          <h2>Sign up for our newsletter!</h2>
+        </div>
+        <div class="form_box">
+         <div class="new_div">
+            <input type="text " placeholder="Enter a valid email address" />
+            <a href="#"><img src="/Resources/img/icon/send_icon.png" alt="" /></a>
+            <hr />
+         </div>
+        </div>
+      </div>
+    </section>
+  </body>
 </html>
