diary section added

--- a/index.html
+++ b/index.html
@@ -138,13 +138,53 @@
           <h2>Sign up for our newsletter!</h2>
         </div>
         <div class="form_box">
-         <div class="new_div">
+          <div class="new_div">
             <input type="text " placeholder="Enter a valid email address" />
-            <a href="#"><img src="/Resources/img/icon/send_icon.png" alt="" /></a>
+            <a href="#"
+              ><img src="/Resources/img/icon/send_icon.png" alt=""
+            /></a>
             <hr />
-         </div>
+          </div>
         </div>
       </div>
     </section>
+    <!-- Newsletter section end here  -->
+
+    <!-- life Style section start here -->
+    <section>
+      <div class="lifestyle_container">
+        <div class="first_one">
+          <div class="lifestyle_img">
+            <img src="/Resources/img/diary_1.png" alt="" />
+          </div>
+          <div class="lifestyle_text">
+            <h4>lifestyle</h4>
+            <h1>Top 10 song for running</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea
+            </p>
+          </div>
+        </div>
+        <div class="second_one">
+          <div class="lifestyle_img">
+            <img src="/Resources/img/diary_2.png" alt="" />
+          </div>
+          <div class="lifestyle_text">
+            <h4>lifestyle</h4>
+            <h1>Cold winter days</h1>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+              enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- life style section end here  -->
   </body>
 </html>
