footer part complete

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     </section>
     <!-- Newsletter section end here  -->
 
-    <!-- life Style section start here -->
+    <!-- Diary section start here -->
     <section>
       <div class="lifestyle_container">
         <div class="first_one">
@@ -185,6 +185,35 @@
         </div>
       </div>
     </section>
-    <!-- life style section end here  -->
+    <!-- Diary style section end here  -->
+    <!-- load more section start -->
+    <section>
+      <div class="load_more">
+        <p class="load_btn"><a href="#">Load more</a></p>
+      </div>
+    </section>
+    <!-- load more section end -->
+
+    <!-- Footer section start  -->
+    <footer>
+      <div class="footer_container">
+        <div class="div_one">
+          <a href="#">Terms and conditions</a>
+          <a href="#">Privacy</a>
+          <small><a href="https://www.facebook.com/ikramakbar1997/" target="_blank">Design By : Ikram Akbar</a></small>
+        </div>
+        <div class="div_two">
+          <div class="follow_text">
+            <a href="#">Follow</a>
+          </div>
+          <div class="social_icon">
+            <img src="/Resources/img/icon/fb_icon.png" alt="" />
+            <img src="/Resources/img/icon/twitter_icon.png" alt="" />
+            <img src="/Resources/img/icon/ista_icon.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </footer>
+    <!-- Footer section end  -->
   </body>
 </html>
