--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Css file link -->
     <link rel="stylesheet" href="/css/style.css" />
+    <!-- Custom Google font  -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital@1&display=swap"
+      rel="stylesheet"
+    />
     <title>Minimo</title>
   </head>
 
@@ -186,6 +193,7 @@
       </div>
     </section>
     <!-- Diary style section end here  -->
+
     <!-- load more section start -->
     <section>
       <div class="load_more">
@@ -194,13 +202,17 @@
     </section>
     <!-- load more section end -->
 
-    <!-- Footer section start  -->
+    <!-- Footer section start here  -->
     <footer>
       <div class="footer_container">
         <div class="div_one">
           <a href="#">Terms and conditions</a>
           <a href="#">Privacy</a>
-          <small><a href="https://www.facebook.com/ikramakbar1997/" target="_blank">Design By : Ikram Akbar</a></small>
+          <small
+            ><a href="https://www.facebook.com/ikramakbar1997/" target="_blank"
+              >Design By : Ikram Akbar</a
+            ></small
+          >
         </div>
         <div class="div_two">
           <div class="follow_text">
@@ -214,6 +226,6 @@
         </div>
       </div>
     </footer>
-    <!-- Footer section end  -->
+    <!-- Footer section end here -->
   </body>
 </html>
